Fix gallery spacing

--- a/themes/summer-house/styles/02-components/01-modules/gallery.styl
+++ b/themes/summer-house/styles/02-components/01-modules/gallery.styl
@@ -16,7 +16,7 @@
 
 .gallery-item
   width 100%
-  display block
+  display table
   a
     display block
   img
